--- a/src/styles/dropdown.module.css
+++ b/src/styles/dropdown.module.css
@@ -4,6 +4,7 @@
     width: 75px;
     height: 75px;
     flex-direction: column;
+
 }
 
 .targetingBox{
@@ -16,7 +17,6 @@
     align-items: center;
     flex-shrink: 0;
     position: relative;
-    opacity: 1;
 
 }
 
